--- a/package.json
+++ b/package.json
@@ -19,5 +19,7 @@
     "gulp-uglify-es": "^2.0.0",
     "jquery": "^3.6.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "slick-carousel": "^1.8.1"
+  }
 }
