--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-sass": "^4.1.0",
     "gulp-svg-sprite": "^1.5.0",
     "gulp-uglify-es": "^2.0.0",
+    "ion-rangeslider": "^2.3.1",
     "jquery": "^3.6.0",
     "mixitup": "^3.3.1"
   },
